--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: PHOTORAMA
+title: Paula Silveira Photography
 email: ""
-description: "Photo Journal"
-url: "https://sunbliss.github.io"
-baseurl: "/photorama"
+description: "Paula Silveira Photography"
+url: "https://yitomok.github.io"
+baseurl: "/paulasilveira"
 facebook_username: ""
 twitter_username: ""
 instagram_username: ""
@@ -33,9 +33,9 @@ comments :
 
 # Internal nav
 nav:
-  - GALLERY: "https://sunbliss.github.io/photorama/gallery/"  
-  - JOURNAL: "https://sunbliss.github.io/photorama/journal/"
-  - ABOUT: "https://sunbliss.github.io/photorama/about/"
+  - GALLERY: "https://yitomok.github.io/paulasilveira/gallery/"
+  - JOURNAL: "https://yitomok.github.io/paulasilveira/journal/"
+  - ABOUT: "https://yitomok.github.io/paulasilveira/about/"
 
 # All translation keys
 translations:
@@ -43,8 +43,8 @@ translations:
   permalink: "/404.html"
 
 # Server
-destination:      	 ./_site
-port:             	 4000
+destination: ./_site
+port: 4000
 
 
 # Build settings
